update links,add logo

--- a/scss/utils/_vars.scss
+++ b/scss/utils/_vars.scss
@@ -1,6 +1,6 @@
 // color vars
 $mainFontcolor: #282828;
-$hoverColor: #c5af9b;
-$activeColor: #f6e3d2;
+$hoverColor: #cda075;
+$activeColor: #eab888;
 $bgColor: #fffefc;
 $reviewColor: #2a3d5e;
