--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1,11 +1,41 @@
 @import "../scss/";
 
+html {
+	box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+	margin: 0;
+	padding: 0;
+}
+
 body {
 	background-color: $bgColor;
+	color: $mainFontcolor;
+}
+
+ol,
+ul {
+	list-style: none;
+}
+
+button {
+	border: none;
+	cursor: pointer;
+}
+
+img,
+picture,
+svg {
+	display: block;
+	max-width: 100%;
 }
 
 a {
-	color: $mainFontcolor;
+	text-decoration: none;
+	color: inherit;
 	text-decoration: none;
 
 	transition: all 250ms ease;
