update nav links

--- a/scss/utils/_vars.scss
+++ b/scss/utils/_vars.scss
@@ -4,3 +4,8 @@ $hoverColor: #cda075;
 $activeColor: #eab888;
 $bgColor: #fffefc;
 $reviewColor: #2a3d5e;
+
+// transition vars
+
+$trDuration: 250ms;
+$trTimeFunc: ease-in;
