--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1,4 +1,4 @@
-@import "../scss/";
+@import "./index.scss";
 
 html {
 	box-sizing: border-box;
@@ -34,19 +34,39 @@ svg {
 }
 
 a {
+	position: relative;
+
 	text-decoration: none;
 	color: inherit;
-	text-decoration: none;
 
-	transition: all 250ms ease;
+	transition-property: color, text-decoration;
+	transition-duration: $trDuration;
+	transition-timing-function: $trTimeFunc;
 
 	&:hover {
 		color: $hoverColor;
-		text-decoration: underline;
+
+		&::after {
+			width: 100%;
+			background-color: $hoverColor;
+		}
 	}
 
 	&:active {
 		color: $activeColor;
-		text-decoration: underline;
+	}
+
+	&::after {
+		content: "";
+		position: absolute;
+		left: 0;
+		bottom: -2px;
+		width: 0;
+		height: 1.5px;
+		background-color: $mainFontcolor;
+
+		transition-property: width, background-color;
+		transition-duration: $trDuration;
+		transition-timing-function: $trTimeFunc;
 	}
 }
