--- a/components/LanguageSwitcher/LanguageSwitcher.module.scss
+++ b/components/LanguageSwitcher/LanguageSwitcher.module.scss
@@ -1,45 +1,24 @@
-@import "./index.scss";
+@import "@/scss/";
 
-html {
-	box-sizing: border-box;
+.switcher {
+	font-size: 16px;
+	font-weight: 500;
+
+	display: flex;
+	align-items: center;
+	gap: 5px;
 }
 
-*,
-*::before,
-*::after {
-	margin: 0;
-	padding: 0;
-}
-
-body {
-	background-color: $bgColor;
-	color: $mainFontcolor;
-
-	overflow-x: hidden;
-}
-
-ol,
-ul {
-	list-style: none;
-}
-
-button {
-	border: none;
-	cursor: pointer;
-}
-
-img,
-picture,
-svg {
-	display: block;
-	max-width: 100%;
-}
-
-a {
+.btn {
 	position: relative;
 
-	text-decoration: none;
+	font-size: 20px;
+	font-weight: 500;
+	font-family: inherit;
+	text-transform: uppercase;
+
 	color: inherit;
+	background-color: transparent;
 
 	transition-property: color, text-decoration;
 	transition-duration: $trDuration;
@@ -62,13 +41,25 @@ a {
 		content: "";
 		position: absolute;
 		left: 0;
-		bottom: -2px;
+		bottom: -1px;
 		width: 0;
-		height: 1.5px;
+		height: 2px;
 		background-color: $mainFontcolor;
 
 		transition-property: width, background-color;
 		transition-duration: $trDuration;
 		transition-timing-function: $trTimeFunc;
+	}
+}
+
+.current {
+	composes: btn;
+	background-color: transparent;
+
+	color: $hoverColor;
+
+	&::after {
+		background-color: $hoverColor;
+		width: 100%;
 	}
 }
