--- a/scss/utils/_vars.scss
+++ b/scss/utils/_vars.scss
@@ -5,6 +5,12 @@ $activeColor: #eab888;
 $bgColor: #fffefc;
 $reviewColor: #2a3d5e;
 
+// font vars
+
+$montserrat: "Montserrat", sans-serif;
+$nothing: "Nothing You Could Do", cursive;
+$cormorant: "Cormorant", serif;
+
 // transition vars
 
 $trDuration: 250ms;
