--- a/scss/global.scss
+++ b/scss/global.scss
@@ -25,6 +25,9 @@ ul {
 }
 
 button {
+	font-size: inherit;
+	font-family: inherit;
+	background-color: transparent;
 	border: none;
 	cursor: pointer;
 }
