--- a/components/Layout/LayoutForm/LayoutForm.module.scss
+++ b/components/Layout/LayoutForm/LayoutForm.module.scss
@@ -1,3 +1,60 @@
+@import "@/scss/";
+
 .form {
 	width: 50%;
+
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+	gap: 16px;
+
+	input,
+	textarea {
+		width: 100%;
+
+		font-family: inherit;
+		font-size: 16px;
+
+		text-transform: capitalize;
+
+		border: 1px solid $mainFontcolor;
+		border-radius: 10px;
+		padding: 20px 22px;
+
+		&::placeholder {
+			font-family: inherit;
+
+			font-size: 16px;
+
+			line-height: 125%;
+		}
+	}
+
+	textarea {
+		height: 140px;
+		resize: none;
+	}
+
+	.submit {
+		padding: 12px 16px;
+
+		border-radius: 10px;
+		border: 1px solid $mainFontcolor;
+
+		transition-property: border, background-color, color;
+		transition-duration: $trDuration;
+		transition-timing-function: $trTimeFunc;
+
+		&:hover {
+			background-color: $hoverColor;
+			border: 1px solid transparent;
+			color: $bgColor;
+		}
+
+		&:active {
+			background-color: $activeColor;
+			border: 1px solid transparent;
+			color: $bgColor;
+		}
+	}
 }
