add formik, yup and error message

--- a/components/Layout/LanguageSwitcher/LanguageSwitcher.module.scss
+++ b/components/Layout/LanguageSwitcher/LanguageSwitcher.module.scss
@@ -24,7 +24,8 @@
 	transition-duration: $trDuration;
 	transition-timing-function: $trTimeFunc;
 
-	&:hover {
+	&:hover,
+	&:focus {
 		color: $hoverColor;
 
 		&::after {
