--- a/components/Layout/Reviews/Reviews.module.scss
+++ b/components/Layout/Reviews/Reviews.module.scss
@@ -8,12 +8,37 @@
 	margin-bottom: 40px;
 }
 
+.slider {
+	position: relative;
+
+	.ctrls {
+		position: absolute;
+		bottom: 50px;
+		left: 50%;
+		transform: translateX(-50%);
+		z-index: 1;
+
+		display: flex;
+		gap: 30px;
+
+		button {
+			color: $bgColor;
+			.icon {
+				&.next {
+					transform: rotate(90deg);
+				}
+				&.prev {
+					transform: rotate(-90deg);
+				}
+			}
+		}
+	}
+}
+
 .wrapper {
 	position: relative;
 	width: 100%;
 	height: 585px;
-
-	margin-bottom: 120px;
 
 	display: flex;
 	flex-direction: column;
