--- a/scss/global.scss
+++ b/scss/global.scss
@@ -32,6 +32,10 @@ button {
 	background-color: transparent;
 	border: none;
 	cursor: pointer;
+
+	&:focus {
+		outline: 2px solid transparent;
+	}
 }
 
 img,
