--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -1,8 +1,7 @@
 @import "@/scss/";
 
 .heroImg {
-	width: 100%;
-	height: 712px;
-
-	// background-color: teal;
+	width: auto;
+	height: auto;
+	margin: 0 auto;
 }
