some small fixes

--- a/components/Layout/Benefits/Benefits.module.scss
+++ b/components/Layout/Benefits/Benefits.module.scss
@@ -10,7 +10,9 @@
 
 	display: flex;
 	justify-content: center;
-	// gap: 100px;
+
+	margin-bottom: 120px;
+
 	.benefit {
 		display: flex;
 		gap: 16px;
