--- a/components/pages/main/WhatWeOffer/WhatWeOffer.module.scss
+++ b/components/pages/main/WhatWeOffer/WhatWeOffer.module.scss
@@ -19,6 +19,7 @@
 		font-size: 28px;
 		font-weight: 500;
 		text-transform: capitalize;
+		text-align: center;
 
 		border-bottom: 1px solid currentColor;
 
