--- a/components/pages/main/SectionLg/SectionLg.module.scss
+++ b/components/pages/main/SectionLg/SectionLg.module.scss
@@ -2,8 +2,35 @@
 
 .article {
 	display: flex;
-	justify-content: space-between;
+	flex-direction: column;
+	// justify-content: space-between;
 	align-items: center;
+	gap: 50px;
+
+	.main {
+		width: 100%;
+		display: flex;
+		justify-content: space-between;
+	}
+
+	.side {
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-end;
+		align-items: center;
+		gap: 100px;
+
+		width: 630px;
+
+		.nothing {
+			font-size: 40px;
+			font-weight: 400;
+			line-height: 120%;
+			letter-spacing: -0.88px;
+
+			user-select: none;
+		}
+	}
 }
 
 .wrapper {
@@ -30,28 +57,52 @@
 	.phone {
 		padding-bottom: 4px;
 	}
+}
 
-	.link {
-		padding: 10px;
+.link {
+	justify-self: flex-end;
+	align-self: flex-end;
+	padding: 10px;
 
-		display: inline-flex;
+	display: inline-flex;
+	align-items: center;
+	gap: 12px;
+
+	.icon {
+		width: 40px;
+		height: 40px;
+		background-color: currentColor;
+		border-radius: 50%;
+
+		display: flex;
+		justify-content: center;
 		align-items: center;
-		gap: 12px;
 
-		.icon {
-			width: 40px;
-			height: 40px;
-			background-color: currentColor;
-			border-radius: 50%;
+		svg {
+			color: $bgColor;
+			transform: rotate(-180deg);
+		}
+	}
+}
 
+.images {
+	width: 100%;
+	height: 580px;
+
+	display: flex;
+	justify-content: space-between;
+	gap: 20px;
+
+	.wrapper {
+		width: 630px;
+		display: flex;
+		flex-direction: column;
+		// justify-content: space-between;
+		gap: 20px;
+
+		.subwrapper {
 			display: flex;
-			justify-content: center;
-			align-items: center;
-
-			svg {
-				color: $bgColor;
-				transform: rotate(-180deg);
-			}
+			gap: 20px;
 		}
 	}
 }
