add sections to restaurant

--- a/scss/utils/_vars.scss
+++ b/scss/utils/_vars.scss
@@ -3,7 +3,7 @@ $mainFontcolor: #282828;
 $hoverColor: #cda075;
 $activeColor: #eab888;
 $bgColor: #fffefc;
-$reviewColor: #2a3d5e;
+$bannerColor: #2a3d5e;
 
 // font vars
 
