--- a/components/SliderCtrls/SliderCtrls.module.scss
+++ b/components/SliderCtrls/SliderCtrls.module.scss
@@ -1,5 +1,16 @@
 @import "@/scss/";
 
+.mainCtrls {
+	position: absolute;
+	bottom: -40px;
+	left: 50%;
+	transform: translateX(-40%);
+	z-index: 1;
+
+	display: flex;
+	gap: 90px;
+}
+
 .ctrls {
 	position: absolute;
 	bottom: 50px;
@@ -9,21 +20,21 @@
 
 	display: flex;
 	gap: 30px;
+}
 
-	button {
-		color: $bgColor;
+.ctrl {
+	color: currentColor;
 
-		transition-property: color;
-		transition-duration: $trDuration;
-		transition-timing-function: $trTimeFunc;
-		.icon {
-			&.next {
-				transform: rotate(180deg);
-			}
+	transition-property: color;
+	transition-duration: $trDuration;
+	transition-timing-function: $trTimeFunc;
+	.icon {
+		&.next {
+			transform: rotate(180deg);
 		}
+	}
 
-		&:hover {
-			color: $hoverColor;
-		}
+	&:hover {
+		color: $hoverColor;
 	}
 }
