--- a/components/Banner/Banner.module.scss
+++ b/components/Banner/Banner.module.scss
@@ -15,6 +15,8 @@
 
 	.text {
 		text-align: center;
+		// ! ==========================>
+		// font-size: 54px;
 		font-size: 64px;
 		font-weight: 500;
 		text-transform: uppercase;
