--- a/components/Container/Container.module.scss
+++ b/components/Container/Container.module.scss
@@ -1,5 +1,15 @@
+@import "@/scss/";
+
 .container {
-	width: 1280px;
+	max-width: 1280px;
+	padding: 0 20px;
 	margin: 0 auto;
-	padding: 0 80px;
+
+	@include tablet {
+		padding: 0 32px;
+	}
+
+	@include desktop {
+		padding: 0 80px;
+	}
 }
