--- a/components/Layout/LanguageSwitcher/LanguageSwitcher.module.scss
+++ b/components/Layout/LanguageSwitcher/LanguageSwitcher.module.scss
@@ -1,12 +1,16 @@
 @import "@/scss/";
 
 .switcher {
+	display: none;
+
 	font-size: 16px;
 	font-weight: 500;
 
-	display: flex;
-	align-items: center;
-	gap: 5px;
+	@include desktop {
+		display: flex;
+		align-items: center;
+		gap: 5px;
+	}
 }
 
 .btn {
