--- a/components/Layout/Nav/Nav.module.scss
+++ b/components/Layout/Nav/Nav.module.scss
@@ -1,10 +1,15 @@
 @import "@/scss/";
 
 .nav {
-	padding: 22px 0;
-	display: flex;
-	justify-content: center;
-	gap: 50px;
+	display: none;
+
+	@include desktop {
+		padding: 22px 0;
+
+		display: flex;
+		justify-content: center;
+		gap: 50px;
+	}
 }
 
 .top {
