--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -1,6 +1,13 @@
 @import "@/scss/";
 
 .heroImg {
-	max-width: 1440;
+	@include tablet {
+		max-width: 768px;
+		height: auto;
+	}
+
+	@include desktop {
+		max-width: 1440px;
+	}
 	margin: 0 auto;
 }
