--- a/components/Layout/Reviews/Reviews.module.scss
+++ b/components/Layout/Reviews/Reviews.module.scss
@@ -1,11 +1,18 @@
 @import "@/scss/";
 
 .desc {
-	font-size: 20px;
-	line-height: 28px;
+	font-size: 16px;
+	font-weight: 400;
 
-	width: 520px;
+	width: 420px;
 	margin-bottom: 40px;
+
+	@include desktop {
+		font-size: 20px;
+		line-height: 28px;
+
+		width: 520px;
+	}
 }
 
 .slider {
@@ -36,7 +43,10 @@
 	color: $bgColor;
 
 	text-align: center;
-
-	font-size: 24px;
+	font-size: 16px;
 	font-weight: 400;
+
+	@include desktop {
+		font-size: 24px;
+	}
 }
