--- a/components/Section/Section.module.scss
+++ b/components/Section/Section.module.scss
@@ -1,12 +1,23 @@
+@import "@/scss/";
+
 .section {
-	margin-bottom: 120px;
+	margin-bottom: 50px;
+
+	@include desktop {
+		margin-bottom: 120px;
+	}
 }
 
 .title {
-	font-size: 56px;
+	font-size: 40px;
 	font-weight: 600;
-
 	text-transform: uppercase;
 
-	margin-bottom: 40px;
+	margin-bottom: 24px;
+
+	@include desktop {
+		font-size: 56px;
+
+		margin-bottom: 40px;
+	}
 }
