--- a/components/pages/main/Intro/Intro.module.scss
+++ b/components/pages/main/Intro/Intro.module.scss
@@ -1,28 +1,46 @@
+@import "@/scss/";
+
 .wrapper {
 	width: 100%;
 
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
-	gap: 23px;
 
-	margin-bottom: 120px;
+	margin-bottom: 50px;
+
+	@include desktop {
+		gap: 23px;
+		align-items: center;
+	}
 
 	.title {
 		text-align: center;
-		font-size: 45px;
+
+		font-size: 28px;
 		font-weight: 400;
-
-		width: 350px;
-
+		line-height: normal;
 		user-select: none;
+
+		width: 220px;
+
+		@include desktop {
+			font-size: 45px;
+			width: 350px;
+		}
 	}
 
 	.desc {
 		text-align: center;
-		font-size: 24px;
+		font-size: 16px;
+		font-style: normal;
 		font-weight: 400;
-		line-height: 133.333%;
-		max-width: 908px;
+		line-height: 125%;
+
+		max-width: 470px;
+
+		@include desktop {
+			font-size: 24px;
+			line-height: 133.333%;
+		}
 	}
 }
