return all pages, and fix photo sizes

--- a/components/pages/main/SectionLg/SectionLg.module.scss
+++ b/components/pages/main/SectionLg/SectionLg.module.scss
@@ -139,6 +139,7 @@
 	.imagesWrapper {
 		display: flex;
 		flex-direction: column;
+		justify-content: space-between;
 		gap: 20px;
 
 		@include desktop {
