--- a/components/Banner/Banner.module.scss
+++ b/components/Banner/Banner.module.scss
@@ -1,30 +1,40 @@
 @import "@/scss/";
 
 .banner {
-	// width: 100%;
 	background-color: $bannerColor;
-	padding: 135px 200px;
+	padding: 110px 80px;
 
 	color: $bgColor;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	gap: 40px;
+	gap: 24px;
 
-	margin-bottom: 120px;
+	margin-bottom: 80px;
+
+	@include desktop {
+		padding: 135px 200px;
+		margin-bottom: 120px;
+
+		gap: 40px;
+	}
 
 	.text {
 		text-align: center;
-		// ! ==========================>
-		// font-size: 54px;
-		font-size: 64px;
+		font-size: 40px;
 		font-weight: 500;
 		text-transform: uppercase;
+
+		@include desktop {
+			font-size: 64px;
+		}
 	}
+
 	.link {
 		padding: 12px 16px;
 		border-radius: 10px;
 		border: 1px solid currentColor;
+		font-weight: 500;
 
 		transition-property: border, background-color, color;
 		transition-duration: $trDuration;
