--- a/components/Container/Container.module.scss
+++ b/components/Container/Container.module.scss
@@ -5,12 +5,12 @@
 	margin: 0 auto;
 
 	@include tablet {
-		max-width: 768px;
+		width: 688px;
 		padding: 0 40px;
 	}
 
 	@include desktop {
-		max-width: 1280px;
+		width: 1280px;
 		padding: 0 80px;
 	}
 }
