--- a/components/Layout/Reviews/Reviews.module.scss
+++ b/components/Layout/Reviews/Reviews.module.scss
@@ -3,8 +3,9 @@
 .desc {
 	font-size: 16px;
 	font-weight: 400;
+	line-height: 150%;
 
-	width: 420px;
+	width: 500px;
 
 	text-align: center;
 	margin: 0 auto 40px;
