--- a/components/MainSlider/MainSlider.module.scss
+++ b/components/MainSlider/MainSlider.module.scss
@@ -1,5 +1,19 @@
+@import "@/scss/";
+
 .wrapper {
 	position: relative;
+	width: 100%;
 
-	width: 620px;
+	margin-bottom: 80px;
+
+	@include desktop {
+		width: 620px;
+
+		margin-bottom: 0;
+	}
+
+	.image {
+		width: 100%;
+		height: auto;
+	}
 }
