--- a/components/pages/restaurant/Menu/Menu.module.scss
+++ b/components/pages/restaurant/Menu/Menu.module.scss
@@ -1,38 +1,84 @@
+@import "@/scss/";
+
 .wrapper {
 	position: relative;
-	height: 600px;
+
+	height: 500px;
 
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
+	align-items: flex-end;
+
+	padding-top: 40px;
+
+	@include desktop {
+		padding-top: 0;
+		height: 600px;
+		align-items: center;
+	}
+
+	.img1,
+	.img2,
+	.img3 {
+		width: 220px;
+		height: 250px;
+
+		object-fit: cover;
+
+		@include desktop {
+			width: 400px;
+			height: 290px;
+		}
+	}
 
 	.img1 {
-		align-self: flex-start;
+		@include desktop {
+			align-self: flex-start;
+		}
 	}
 
 	.img3 {
-		align-self: flex-end;
+		@include desktop {
+			align-self: flex-end;
+		}
 	}
 }
 
 .menu {
 	position: absolute;
-	top: -60px;
-	right: 0;
+	top: 10px;
+	right: 30px;
 
 	display: flex;
 	justify-content: center;
 	align-items: center;
 
-	gap: 60px;
+	gap: 40px;
 
-	.text {
+	@include desktop {
+		top: -60px;
+		right: 0px;
+
 		font-size: 40px;
-		font-weight: 400;
 		line-height: 120%;
 		letter-spacing: -0.88px;
 
+		gap: 60px;
+	}
+
+	.text {
+		font-size: 28px;
+		font-weight: 400;
+		line-height: 171.429%;
+		letter-spacing: -0.616px;
+
 		user-select: none;
+
+		@include desktop {
+			font-size: 40px;
+			line-height: 120%;
+			letter-spacing: -0.88px;
+		}
 	}
 
 	.icon {
@@ -42,8 +88,11 @@
 	.qr {
 		width: 250px;
 		height: 250px;
-		border-radius: 20px;
-		background-color: red;
+
+		@include desktop {
+			width: 300px;
+			height: 300px;
+		}
 	}
 
 	.link {
