--- a/components/pages/restaurant/OurTeam/OurTeam.module.scss
+++ b/components/pages/restaurant/OurTeam/OurTeam.module.scss
@@ -1,9 +1,31 @@
+@import "@/scss/";
+
+.wrapper {
+	display: flex;
+	flex-direction: column-reverse;
+	align-items: center;
+	gap: 40px;
+
+	@include desktop {
+		flex-direction: column;
+		align-items: flex-start;
+		gap: 45px;
+	}
+}
+
 .text {
-	width: 600px;
+	width: 550px;
 
-	font-size: 20px;
+	font-size: 16px;
 	font-weight: 400;
-	line-height: 140%;
+	line-height: 150%;
+	text-align: center;
 
-	margin-bottom: 45px;
+	@include desktop {
+		width: 600px;
+
+		font-size: 20px;
+		line-height: 140%;
+		text-align: start;
+	}
 }
