--- a/components/pages/restaurant/RestSection/RestSection.module.scss
+++ b/components/pages/restaurant/RestSection/RestSection.module.scss
@@ -2,23 +2,53 @@
 
 .wrapper {
 	display: flex;
+	flex-direction: column-reverse;
 	justify-content: space-between;
 
+	@include desktop {
+		flex-direction: row;
+	}
+
 	.subwrapper {
-		width: 410px;
+		width: 535px;
 
 		display: flex;
 		flex-direction: column;
-		gap: 50px;
+		align-items: center;
+		gap: 40px;
+		margin: 0 auto;
 
 		font-size: 20px;
+
+		@include desktop {
+			margin: 0;
+			align-items: flex-start;
+			width: 500px;
+			gap: 50px;
+		}
+
 		.subtitle {
-			font-weight: 600;
+			text-align: center;
+			font-weight: 500;
+
 			text-transform: uppercase;
+
+			@include desktop {
+				text-align: start;
+				font-weight: 600;
+			}
 		}
 
 		.text {
+			text-align: center;
+			font-size: 16px;
 			font-weight: 400;
+			line-height: 150%;
+
+			@include desktop {
+				text-align: start;
+				font-size: 20px;
+			}
 		}
 
 		.link {
