--- a/components/pages/spa/Additional/Additional.module.scss
+++ b/components/pages/spa/Additional/Additional.module.scss
@@ -1,27 +1,57 @@
+@import "@/scss/";
+
 .section {
-	margin-bottom: 120px;
+	margin-bottom: 80px;
+
+	@include desktop {
+		margin-bottom: 120px;
+	}
 
 	.wrapper {
 		margin-bottom: 50px;
 
 		display: flex;
+		flex-direction: column;
+		align-items: center;
 		justify-content: space-between;
+		gap: 40px;
+
+		text-align: center;
+
+		@include desktop {
+			flex-direction: row;
+			align-items: flex-start;
+			gap: 0;
+
+			text-align: start;
+		}
 
 		.subtitle {
-			font-size: 32px;
+			font-size: 28px;
 			font-weight: 600;
 			text-transform: uppercase;
 
-			margin-bottom: 40px;
+			margin-bottom: 24px;
+
+			@include desktop {
+				font-size: 32px;
+
+				margin-bottom: 40px;
+			}
 		}
 
 		li {
-			font-size: 24px;
+			font-size: 20px;
 			font-weight: 400;
+
+			@include desktop {
+				font-size: 24px;
+			}
 		}
 	}
 
 	.image {
 		width: 100%;
+		height: auto;
 	}
 }
