--- a/components/pages/spa/SpaSection/SpaSection.module.scss
+++ b/components/pages/spa/SpaSection/SpaSection.module.scss
@@ -2,23 +2,46 @@
 
 .wrapper {
 	display: flex;
+	flex-direction: column-reverse;
 	justify-content: space-between;
+	align-items: center;
+
+	text-align: center;
+
+	@include desktop {
+		align-items: flex-start;
+		flex-direction: row;
+		text-align: start;
+	}
 
 	.subwrapper {
-		width: 530px;
+		width: 570px;
 
 		display: flex;
 		flex-direction: column;
-		gap: 20px;
+
+		gap: 24px;
 
 		font-size: 20px;
+		line-height: normal;
+
+		@include desktop {
+			width: 450px;
+			gap: 50px;
+		}
+
 		.subtitle {
 			font-weight: 600;
 			text-transform: uppercase;
 		}
 
 		.text {
+			font-size: 16px;
 			font-weight: 400;
+
+			@include desktop {
+				font-size: inherit;
+			}
 		}
 
 		.link {
@@ -32,6 +55,12 @@
 
 			border-radius: 10px;
 			border: 1px solid currentColor;
+
+			margin: 0 auto;
+
+			@include desktop {
+				margin: 0 auto 0 0;
+			}
 
 			&::after {
 				width: 0;
