--- a/components/pages/spa/Vats/Vats.module.scss
+++ b/components/pages/spa/Vats/Vats.module.scss
@@ -2,40 +2,93 @@
 
 .subtitle {
 	font-size: 20px;
-	font-weight: 600;
+	font-weight: 500;
 	line-height: normal;
 	text-transform: uppercase;
+	text-align: center;
 
-	margin-bottom: 40px;
+	margin-bottom: 24px;
+
+	@include desktop {
+		font-weight: 600;
+		text-align: start;
+
+		margin-bottom: 40px;
+	}
 }
 
 .text {
 	font-size: 20px;
 	font-weight: 400;
 	line-height: 140%;
+	text-align: center;
 
-	width: 840px;
+	width: 540px;
 
-	margin-bottom: 40px;
+	margin: 0 auto 24px;
+
+	@include desktop {
+		width: 840px;
+		text-align: start;
+
+		margin: 0 0 40px;
+	}
 }
 
 .images {
 	width: 100%;
-	height: 580px;
 
 	display: flex;
+	flex-direction: column-reverse;
 	justify-content: space-between;
 	gap: 20px;
 
-	.wrapper {
-		width: 630px;
+	@include desktop {
+		height: 580px;
+		flex-direction: row;
+	}
+
+	.imagesWrapper {
 		display: flex;
 		flex-direction: column;
+		justify-content: space-between;
 		gap: 20px;
 
-		.subwrapper {
+		@include desktop {
+			width: 630px;
+		}
+
+		.imagesSubwrapper {
 			display: flex;
-			gap: 20px;
+			justify-content: space-between;
+		}
+	}
+	.big {
+		width: 100%;
+		height: 400px;
+		object-fit: cover;
+
+		@include desktop {
+			width: 630px;
+			height: 580px;
+		}
+	}
+	.mid {
+		width: 100%;
+		height: auto;
+
+		@include desktop {
+			width: 630px;
+			height: 580px;
+		}
+	}
+	.small {
+		width: 332px;
+		height: 216px;
+
+		@include desktop {
+			width: 300px;
+			height: 220px;
 		}
 	}
 }
