--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -1,13 +1,17 @@
 @import "@/scss/";
 
 .heroImg {
+	width: 100%;
+	height: auto;
+
 	@include tablet {
-		max-width: 768px;
-		height: auto;
+		width: 768px;
+		height: 428px;
 	}
 
 	@include desktop {
-		max-width: 1440px;
+		width: 1440px;
+		height: 712px;
 	}
 
 	margin: 0 auto;
