--- a/components/Layout/Burger/Burger.module.scss
+++ b/components/Layout/Burger/Burger.module.scss
@@ -1,9 +1,25 @@
 @import "@/scss/";
 
-.burger {
-	padding: 8px 10px;
-
+.wrapper {
 	@include desktop {
 		display: none;
+	}
+	.burgerOpen {
+		padding: 8px 10px;
+
+		@include small-mobile {
+			width: 100%;
+			height: 100%;
+		}
+
+		.icon {
+			width: 22px;
+			height: 22px;
+
+			@include tablet {
+				width: 32px;
+				height: 32px;
+			}
+		}
 	}
 }
