--- a/components/Layout/Header/Header.module.scss
+++ b/components/Layout/Header/Header.module.scss
@@ -2,7 +2,7 @@
 
 .header {
 	display: flex;
-
+	justify-content: space-around;
 	align-items: center;
 
 	@include desktop {
@@ -12,23 +12,24 @@
 
 .wrapper {
 	display: flex;
-	gap: 12px;
+	gap: 6px;
 
-	margin-right: 165px;
-
-	@include desktop {
-		margin-right: 0;
+	@include tablet {
+		gap: 12px;
 	}
 
 	.icon {
-		width: 28px;
-		height: 28px;
+		width: 20px;
+		height: 20px;
+
+		@include tablet {
+			width: 28px;
+			height: 28px;
+		}
 
 		@include desktop {
 			width: 32px;
 			height: 32px;
-
-			margin-right: 0;
 		}
 
 		&::after {
@@ -38,21 +39,36 @@
 }
 
 .logo {
-	padding: 10px 0;
-	width: 170px;
-	height: 90px;
-
-	margin-right: 185px;
+	padding: 7px 0;
 
 	&::after {
 		display: none;
 	}
 
-	@include desktop {
-		width: 170px;
-		height: 86px;
-		padding: 8px 0;
+	.logoIcon {
+		width: 110px;
+		height: 50px;
 
-		margin-right: 0;
+		@include small-mobile {
+			width: 60px;
+			height: auto;
+		}
+
+		@include tablet {
+			width: 172px;
+			height: 86px;
+		}
+
+		@include desktop {
+			height: 91px;
+		}
+	}
+
+	@include tablet {
+		padding: 10px 0;
+	}
+
+	@include desktop {
+		padding: 8px 0;
 	}
 }
