--- a/components/Benefits/Benefits.module.scss
+++ b/components/Benefits/Benefits.module.scss
@@ -2,7 +2,13 @@
 
 .wrapper {
 	display: flex;
-	gap: 44px;
+	flex-direction: column;
+	gap: 24px;
+
+	@include tablet {
+		flex-direction: row;
+		gap: 44px;
+	}
 
 	@include desktop {
 		gap: 36px;
@@ -20,8 +26,13 @@
 		}
 
 		.img {
-			width: 200px;
-			height: 250px;
+			width: 100%;
+			height: auto;
+
+			@include desktop {
+				width: 200px;
+				height: 250px;
+			}
 
 			@include desktop {
 				width: 400px;
