--- a/components/Layout/Header/Header.module.scss
+++ b/components/Layout/Header/Header.module.scss
@@ -2,7 +2,7 @@
 
 .header {
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 	align-items: center;
 
 	@include desktop {
