--- a/components/pages/main/AboutUs/AboutUs.module.scss
+++ b/components/pages/main/AboutUs/AboutUs.module.scss
@@ -7,7 +7,11 @@
 	justify-content: space-between;
 	gap: 40px;
 
-	margin-bottom: 80px;
+	margin-bottom: 40px;
+
+	@include desktop {
+		margin-bottom: 80px;
+	}
 
 	@include desktop {
 		flex-direction: row;
@@ -16,7 +20,7 @@
 	}
 
 	.img {
-		width: 690px;
+		width: 100%;
 		height: auto;
 
 		@include desktop {
@@ -31,12 +35,17 @@
 		gap: 24px;
 
 		p {
-			width: 570px;
-			font-size: 16px;
+			font-size: 12px;
 			font-weight: 400;
-			line-height: 140%;
+			line-height: 133.333%;
 			text-align: center;
 			margin: 0 auto;
+
+			@include tablet {
+				width: 570px;
+				font-size: 16px;
+				line-height: 140%;
+			}
 
 			@include desktop {
 				text-align: start;
@@ -53,9 +62,13 @@
 
 	.title {
 		text-align: center;
-		font-size: 40px;
+		font-size: 32px;
 		font-weight: 600;
 		text-transform: uppercase;
+
+		@include tablet {
+			font-size: 40px;
+		}
 
 		@include desktop {
 			font-size: 64px;
