--- a/components/pages/main/Intro/Intro.module.scss
+++ b/components/pages/main/Intro/Intro.module.scss
@@ -6,7 +6,15 @@
 	display: flex;
 	justify-content: space-between;
 
-	margin-bottom: 50px;
+	margin-bottom: 40px;
+
+	@include small-mobile {
+		width: 90%;
+	}
+
+	@include tablet {
+		margin-bottom: 50px;
+	}
 
 	@include desktop {
 		gap: 23px;
@@ -17,12 +25,19 @@
 	.title {
 		text-align: center;
 
-		font-size: 28px;
+		font-size: 14px;
 		font-weight: 400;
-		line-height: normal;
 		user-select: none;
 
 		width: 220px;
+
+		@include small-mobile {
+			max-width: 50%;
+		}
+
+		@include tablet {
+			font-size: 28px;
+		}
 
 		@include desktop {
 			font-size: 45px;
@@ -32,12 +47,24 @@
 
 	.desc {
 		text-align: center;
-		font-size: 16px;
-		font-style: normal;
-		font-weight: 400;
-		line-height: 125%;
 
-		max-width: 470px;
+		font-size: 10px;
+		font-weight: 400;
+		line-height: 140%;
+
+		max-width: 220px;
+
+		@include small-mobile {
+			font-size: 8px;
+			max-width: 50%;
+		}
+
+		@include tablet {
+			font-size: 16px;
+			line-height: 125%;
+
+			max-width: 470px;
+		}
 
 		@include desktop {
 			max-width: 900px;
