--- a/components/Layout/Reviews/Reviews.module.scss
+++ b/components/Layout/Reviews/Reviews.module.scss
@@ -1,14 +1,20 @@
 @import "@/scss/";
 
 .desc {
-	font-size: 16px;
+	font-size: 12px;
 	font-weight: 400;
-	line-height: 150%;
-
-	width: 500px;
+	line-height: 133.333%;
 
 	text-align: center;
-	margin: 0 auto 40px;
+	margin: 0 auto 24px;
+
+	@include desktop {
+		font-size: 16px;
+		line-height: 150%;
+
+		width: 500px;
+		margin: 0 auto 40px;
+	}
 
 	@include desktop {
 		font-size: 20px;
@@ -27,29 +33,46 @@
 .wrapper {
 	position: relative;
 	width: 100%;
-	height: 585px;
+	height: 314px;
 
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	gap: 35px;
+	gap: 24px;
 
 	background-color: $bannerColor;
+
+	@include tablet {
+		gap: 35px;
+		height: 585px;
+	}
 }
 
 .img {
+	width: 60px;
+	height: 60px;
 	border-radius: 50%;
+
+	@include tablet {
+		width: 120px;
+		height: 120px;
+	}
 }
 
 .text {
-	width: 600px;
-
 	color: $bgColor;
+	width: 294px;
 
 	text-align: center;
-	font-size: 16px;
+	font-size: 12px;
 	font-weight: 400;
+	line-height: 16px;
+
+	@include tablet {
+		width: 600px;
+		font-size: 16px;
+	}
 
 	@include desktop {
 		font-size: 24px;
