--- a/components/SliderCtrls/SliderCtrls.module.scss
+++ b/components/SliderCtrls/SliderCtrls.module.scss
@@ -18,14 +18,19 @@
 
 .ctrls {
 	position: absolute;
-	bottom: 110px;
 	left: 50%;
+	bottom: 20px;
 	transform: translateX(-50%);
 	z-index: 1;
 
 	display: flex;
-	gap: 30px;
+	gap: 20px;
 	color: $bgColor;
+
+	@include tablet {
+		gap: 30px;
+		bottom: 110px;
+	}
 
 	@include desktop {
 		bottom: 50px;
@@ -39,8 +44,13 @@
 	transition-duration: $trDuration;
 	transition-timing-function: $trTimeFunc;
 	.icon {
-		width: 28px;
-		height: 28px;
+		width: 20px;
+		height: 20px;
+
+		@include tablet {
+			width: 28px;
+			height: 28px;
+		}
 
 		@include desktop {
 			width: 25px;
