--- a/components/Layout/Feedback/Feedback.module.scss
+++ b/components/Layout/Feedback/Feedback.module.scss
@@ -1,16 +1,22 @@
 @import "@/scss/";
 
 .desc {
-	font-size: 16px;
+	font-size: 12px;
 	line-height: 150%;
 	text-align: center;
+	line-height: 133.333%;
 
-	width: 380px;
 	margin: 0 auto 24px;
+
+	@include tablet {
+		font-size: 16px;
+		line-height: 150%;
+		width: 380px;
+	}
 
 	@include desktop {
 		font-size: 20px;
-		line-height: 28px;
+		line-height: 116.667%;
 		width: 520px;
 
 		text-align: start;
@@ -21,7 +27,11 @@
 .wrapper {
 	display: flex;
 	flex-direction: column;
-	gap: 40px;
+	gap: 24px;
+
+	@include tablet {
+		gap: 40px;
+	}
 
 	@include desktop {
 		flex-direction: row;
@@ -35,10 +45,10 @@
 
 .welcome {
 	font-size: 28px;
-
 	font-weight: 400;
 	line-height: 171.429%;
 	letter-spacing: -0.616px;
+	text-align: center;
 
 	user-select: none;
 
@@ -48,6 +58,7 @@
 		font-size: 40px;
 		line-height: 120%;
 		letter-spacing: -0.88px;
+		text-align: start;
 
 		margin-bottom: 40px;
 	}
@@ -57,10 +68,15 @@
 	display: flex;
 	flex-direction: column;
 
-	gap: 16px;
+	gap: 12px;
 
-	font-size: 16px;
+	font-size: 12px;
 	font-weight: 500;
+
+	@include tablet {
+		font-size: 16px;
+		gap: 16px;
+	}
 
 	@include desktop {
 		font-size: 20px;
@@ -72,8 +88,27 @@
 		align-items: center;
 		gap: 16px;
 
+		@include tablet {
+			gap: 16px;
+		}
+
 		@include desktop {
 			gap: 24px;
+		}
+
+		.icon {
+			width: 16px;
+			height: 16px;
+
+			@include tablet {
+				width: 28px;
+				height: 28px;
+			}
+
+			@include desktop {
+				width: 24px;
+				height: 24px;
+			}
 		}
 	}
 }
