--- a/components/Layout/LayoutForm/LayoutForm.module.scss
+++ b/components/Layout/LayoutForm/LayoutForm.module.scss
@@ -6,7 +6,11 @@
 	display: flex;
 	flex-direction: column;
 	align-items: flex-end;
-	gap: 16px;
+	gap: 12px;
+
+	@include tablet {
+		gap: 16px;
+	}
 
 	@include desktop {
 		width: 50%;
@@ -14,21 +18,32 @@
 
 	input,
 	textarea {
-		width: 93%;
+		width: 90%;
 		background-color: transparent;
 
 		font-family: inherit;
-		font-size: 16px;
+		font-size: 12px;
 
 		border: 1px solid $mainFontcolor;
 		border-radius: 10px;
-		padding: 20px 22px;
+		padding: 10px 16px;
 
 		outline: 1.5px solid transparent;
 
 		transition-property: outline;
 		transition-duration: $trDuration;
-		transition-timing-function: 100ms;
+		transition-timing-function: $trTimeFunc;
+
+		@include small-mobile {
+			width: 85%;
+		}
+
+		@include tablet {
+			width: 93%;
+			padding: 20px 22px;
+
+			font-size: 16px;
+		}
 
 		@include desktop {
 			width: 100%;
@@ -36,10 +51,12 @@
 
 		&::placeholder {
 			font-family: inherit;
-
-			font-size: 16px;
-
+			font-size: 12px;
 			line-height: 125%;
+
+			@include tablet {
+				font-size: 16px;
+			}
 		}
 
 		&:focus {
@@ -54,6 +71,8 @@
 
 	.submit {
 		padding: 12px 16px;
+		font-weight: 500;
+		width: 165px;
 
 		border-radius: 10px;
 		border: 1px solid $mainFontcolor;
@@ -72,6 +91,10 @@
 			background-color: $activeColor;
 			border: 1px solid transparent;
 			color: $bgColor;
+		}
+
+		@include tablet {
+			width: auto;
 		}
 	}
 
