--- a/components/Layout/Map/Map.module.scss
+++ b/components/Layout/Map/Map.module.scss
@@ -3,10 +3,15 @@
 .map {
 	border: none;
 
-	margin-bottom: 80px;
-
 	width: 100%;
-	height: 585px;
+	height: 243px;
+
+	margin-bottom: 40px;
+
+	@include tablet {
+		height: 585px;
+		margin-bottom: 80px;
+	}
 
 	@include desktop {
 		height: 635px;
