--- a/scss/utils/_vars.scss
+++ b/scss/utils/_vars.scss
@@ -1,7 +1,7 @@
 // color vars
 $mainFontcolor: #282828;
-$hoverColor: #cda075;
-$activeColor: #eab888;
+$hoverColor: #bb824c;
+$activeColor: #cda075;
 $bgColor: #fffefc;
 $bannerColor: #2a3d5e;
 $attention: #ea362b;
