--- a/components/pages/contacts/Contacts.module.scss
+++ b/components/pages/contacts/Contacts.module.scss
@@ -5,16 +5,25 @@
 	padding: 16px 0;
 
 	color: $bgColor;
-	font-size: 16px;
+	font-size: 10px;
+
 	background-color: $hoverColor;
 
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	gap: 12px;
+	gap: 10px;
 
-	margin-bottom: 80px;
+	margin-bottom: 40px;
+
+	@include tablet {
+		font-size: 16px;
+
+		gap: 12px;
+
+		margin-bottom: 80px;
+	}
 
 	@include desktop {
 		padding: 24px 0;
@@ -39,12 +48,17 @@
 }
 
 .title {
-	font-size: 40px;
+	font-size: 32px;
 	font-weight: 600;
 	text-transform: uppercase;
 	text-align: center;
 
-	margin-bottom: 40px;
+	margin-bottom: 30px;
+
+	@include tablet {
+		font-size: 40px;
+		margin-bottom: 40px;
+	}
 
 	@include desktop {
 		font-size: 64px;
@@ -53,12 +67,18 @@
 }
 
 .form {
-	padding: 40px 20px;
+	padding: 20px;
 
 	border-radius: 10px;
 	border: 1px solid currentColor;
 
-	margin-bottom: 80px;
+	margin-bottom: 40px;
+
+	@include tablet {
+		padding: 40px 20px;
+
+		margin-bottom: 80px;
+	}
 
 	@include desktop {
 		padding: 80px;
@@ -76,13 +96,17 @@
 
 		color: $mainFontcolor;
 
-		padding-bottom: 16px;
+		padding-bottom: 10px;
 
 		background-color: transparent;
 		border: none;
 		border-bottom: 1.5px solid currentColor;
 		outline: none;
 		resize: none;
+
+		@include tablet {
+			padding-bottom: 16px;
+		}
 
 		@include desktop {
 			padding-left: 2px;
@@ -106,19 +130,33 @@
 
 	.wrapper {
 		display: flex;
-		justify-content: space-between;
+		flex-direction: column;
+		gap: 24px;
 
-		margin-bottom: 40px;
+		margin-bottom: 24px;
+
+		@include tablet {
+			flex-direction: row;
+			justify-content: space-between;
+
+			margin-bottom: 40px;
+		}
 
 		.left,
 		.right {
 			display: flex;
 			flex-direction: column;
-			gap: 48px;
+			gap: 24px;
+
+			@include tablet {
+				gap: 48px;
+			}
 
 			input,
 			select {
-				width: 300px;
+				@include tablet {
+					width: 300px;
+				}
 
 				@include desktop {
 					width: 480px;
@@ -128,13 +166,21 @@
 	}
 
 	.note {
-		width: 330px;
-		margin: 0 auto 50px;
-
-		font-size: 16px;
+		font-size: 12px;
 		font-weight: 400;
-		line-height: 150%;
+		line-height: 133.333%;
 		text-align: center;
+
+		margin-bottom: 24px;
+
+		@include tablet {
+			width: 330px;
+
+			font-size: 16px;
+			line-height: 150%;
+
+			margin: 0 auto 50px;
+		}
 
 		@include desktop {
 			width: 420px;
@@ -148,12 +194,19 @@
 	}
 
 	.additional {
-		text-align: center;
-		font-size: 20px;
+		font-size: 16px;
 		font-weight: 500;
-		line-height: 120%;
+		line-height: 150%;
+		text-align: center;
 
-		margin-bottom: 40px;
+		margin-bottom: 24px;
+
+		@include tablet {
+			font-size: 20px;
+			line-height: 120%;
+
+			margin-bottom: 40px;
+		}
 
 		@include desktop {
 			font-size: 24px;
@@ -165,14 +218,22 @@
 
 	.checkboxes {
 		display: flex;
-		justify-content: space-between;
+		flex-direction: column;
+		gap: 16px;
 
 		text-align: center;
 		font-size: 16px;
 		font-weight: 400;
 		line-height: 150%;
 
-		margin-bottom: 40px;
+		margin-bottom: 24px;
+
+		@include tablet {
+			flex-direction: row;
+			justify-content: space-between;
+
+			margin-bottom: 40px;
+		}
 
 		@include desktop {
 			font-size: 24px;
@@ -201,8 +262,8 @@
 		}
 
 		.checkbox {
-			width: 25px;
-			height: 25px;
+			width: 16px;
+			height: 16px;
 
 			border-radius: 5px;
 			border: 1.5px solid currentColor;
@@ -211,8 +272,20 @@
 			transition-duration: 150ms;
 			transition-timing-function: $trTimeFunc;
 
+			@include tablet {
+				width: 25px;
+				height: 25px;
+			}
+
 			.icon {
 				stroke: $bgColor;
+				width: 15px;
+				height: 15px;
+
+				@include tablet {
+					width: 24px;
+					height: 24px;
+				}
 			}
 		}
 	}
@@ -222,7 +295,11 @@
 		flex-direction: column;
 		justify-content: space-between;
 		align-items: center;
-		gap: 40px;
+		gap: 24px;
+
+		@include tablet {
+			gap: 40px;
+		}
 
 		@include desktop {
 			flex-direction: row;
@@ -230,22 +307,27 @@
 		}
 
 		textarea {
-			width: 400px;
+			width: 100%;
+			line-height: normal;
 			padding: 0;
+
+			@include tablet {
+				width: 400px;
+			}
 
 			@include desktop {
 				width: 500px;
-				padding-bottom: 16px;
 			}
 		}
 
 		button {
-			text-align: center;
-			font-size: 20px;
+			color: $mainFontcolor;
+			font-size: 16px;
 			font-weight: 500;
-			line-height: 100%;
+			line-height: 125%;
+			text-align: center;
 
-			padding: 20px 70px;
+			padding: 10px 40px;
 
 			border-radius: 10px;
 			border: none;
@@ -254,6 +336,14 @@
 			transition-property: border, color;
 			transition-duration: $trDuration;
 			transition-timing-function: $trTimeFunc;
+
+			@include tablet {
+				font-size: 20px;
+				font-weight: 500;
+				line-height: 100%;
+
+				padding: 20px 70px;
+			}
 
 			@include desktop {
 				font-size: 24px;
@@ -272,12 +362,12 @@
 	}
 
 	.error {
-		font-size: 12px;
+		font-size: 10px;
 		font-weight: 500;
 		color: red;
 
-		@include desktop {
-			font-size: 10px;
+		@include tablet {
+			font-size: 12px;
 		}
 	}
 }
