--- a/components/pages/hotel/HotelSection/HotelSection.module.scss
+++ b/components/pages/hotel/HotelSection/HotelSection.module.scss
@@ -15,15 +15,20 @@
 	}
 
 	.subwrapper {
-		width: 570px;
-
 		display: flex;
 		flex-direction: column;
 
-		gap: 40px;
+		gap: 24px;
 
-		font-size: 20px;
+		font-size: 16px;
 		line-height: normal;
+
+		@include tablet {
+			gap: 40px;
+			font-size: 20px;
+
+			width: 570px;
+		}
 
 		@include desktop {
 			width: 450px;
@@ -36,8 +41,9 @@
 		}
 
 		.text {
-			font-size: 16px;
+			font-size: 12px;
 			font-weight: 400;
+			line-height: 133.333%;
 
 			@include desktop {
 				font-size: inherit;
@@ -51,11 +57,20 @@
 			align-items: center;
 			gap: 12px;
 
+			font-size: 12px;
+			font-style: italic;
+			font-weight: 500;
+			line-height: 166.667%;
+
 			margin: 0 auto;
 
 			@include desktop {
-				margin: 0 auto 0 0;
 				font-size: inherit;
+			}
+
+			@include desktop {
+				font-style: normal;
+				margin: 0 auto 0 0;
 			}
 
 			.icon {
