--- a/components/pages/pool/Gallery/Gallery.module.scss
+++ b/components/pages/pool/Gallery/Gallery.module.scss
@@ -11,15 +11,28 @@
 
 	.wrapper {
 		display: flex;
+		flex-direction: column;
 		gap: 24px;
+
+		@include tablet {
+			flex-direction: row;
+		}
 
 		@include desktop {
 			gap: 40px;
 		}
 
 		.big {
-			width: 332px;
-			height: 222px;
+			width: 100%;
+			height: 200px;
+
+			object-fit: cover;
+
+			@include tablet {
+				width: 332px;
+				height: 222px;
+			}
+
 			@include desktop {
 				width: 620px;
 				height: 420px;
@@ -27,8 +40,15 @@
 		}
 
 		.small {
-			width: 213px;
-			height: 250px;
+			width: 100%;
+			height: 200px;
+
+			object-fit: cover;
+
+			@include tablet {
+				width: 213px;
+				height: 250px;
+			}
 
 			@include desktop {
 				width: 400px;
