--- a/components/pages/spa/Additional/Additional.module.scss
+++ b/components/pages/spa/Additional/Additional.module.scss
@@ -1,22 +1,32 @@
 @import "@/scss/";
 
 .section {
-	margin-bottom: 80px;
+	margin-bottom: 40px;
+
+	@include tablet {
+		margin-bottom: 80px;
+	}
 
 	@include desktop {
 		margin-bottom: 120px;
 	}
 
 	.wrapper {
-		margin-bottom: 50px;
+		margin-bottom: 24px;
 
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		justify-content: space-between;
-		gap: 40px;
+		gap: 24px;
 
 		text-align: center;
+
+		@include tablet {
+			gap: 40px;
+
+			margin-bottom: 50px;
+		}
 
 		@include desktop {
 			flex-direction: row;
@@ -27,11 +37,15 @@
 		}
 
 		.subtitle {
-			font-size: 28px;
+			font-size: 24px;
 			font-weight: 600;
 			text-transform: uppercase;
 
 			margin-bottom: 24px;
+
+			@include tablet {
+				font-size: 28px;
+			}
 
 			@include desktop {
 				font-size: 32px;
@@ -41,8 +55,13 @@
 		}
 
 		li {
-			font-size: 20px;
+			font-size: 18px;
 			font-weight: 400;
+			line-height: 155.556%;
+
+			@include tablet {
+				font-size: 20px;
+			}
 
 			@include desktop {
 				font-size: 24px;
@@ -52,6 +71,11 @@
 
 	.image {
 		width: 100%;
-		height: auto;
+		height: 200px;
+		object-fit: cover;
+
+		@include tablet {
+			height: auto;
+		}
 	}
 }
