--- a/components/pages/spa/SpaSection/SpaSection.module.scss
+++ b/components/pages/spa/SpaSection/SpaSection.module.scss
@@ -15,8 +15,6 @@
 	}
 
 	.subwrapper {
-		width: 570px;
-
 		display: flex;
 		flex-direction: column;
 
@@ -25,19 +23,32 @@
 		font-size: 20px;
 		line-height: normal;
 
+		@include tablet {
+			width: 570px;
+		}
+
 		@include desktop {
 			width: 450px;
 			gap: 50px;
 		}
 
 		.subtitle {
+			font-size: 16px;
 			font-weight: 600;
 			text-transform: uppercase;
+
+			@include tablet {
+				font-size: inherit;
+			}
 		}
 
 		.text {
-			font-size: 16px;
+			font-size: 12px;
 			font-weight: 400;
+
+			@include tablet {
+				font-size: 16px;
+			}
 
 			@include desktop {
 				font-size: inherit;
@@ -45,11 +56,12 @@
 		}
 
 		.link {
-			width: 220px;
-			text-align: center;
-			font-size: 16px;
+			width: 150px;
+
+			font-size: 12px;
 			font-weight: 500;
-			line-height: 125%;
+			line-height: 166.667%;
+			text-align: center;
 
 			padding: 12px 16px;
 
@@ -57,6 +69,13 @@
 			border: 1px solid currentColor;
 
 			margin: 0 auto;
+
+			@include tablet {
+				width: 220px;
+
+				font-size: 16px;
+				line-height: 125%;
+			}
 
 			@include desktop {
 				margin: 0 auto 0 0;
