--- a/components/pages/spa/Vats/Vats.module.scss
+++ b/components/pages/spa/Vats/Vats.module.scss
@@ -9,6 +9,9 @@
 
 	margin-bottom: 24px;
 
+	@include tablet {
+	}
+
 	@include desktop {
 		font-weight: 600;
 		text-align: start;
@@ -18,14 +21,19 @@
 }
 
 .text {
-	font-size: 20px;
+	font-size: 12px;
 	font-weight: 400;
-	line-height: 140%;
+	line-height: 133.333%;
 	text-align: center;
 
-	width: 540px;
-
 	margin: 0 auto 24px;
+
+	@include tablet {
+		width: 540px;
+
+		font-size: 20px;
+		line-height: 140%;
+	}
 
 	@include desktop {
 		width: 840px;
@@ -41,7 +49,11 @@
 	display: flex;
 	flex-direction: column-reverse;
 	justify-content: space-between;
-	gap: 20px;
+	gap: 24px;
+
+	@include tablet {
+		gap: 20px;
+	}
 
 	@include desktop {
 		height: 580px;
@@ -52,7 +64,11 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		gap: 20px;
+		gap: 24px;
+
+		@include tablet {
+			gap: 20px;
+		}
 
 		@include desktop {
 			width: 630px;
@@ -65,8 +81,12 @@
 	}
 	.big {
 		width: 100%;
-		height: 400px;
+		height: 343px;
 		object-fit: cover;
+
+		@include tablet {
+			height: 400px;
+		}
 
 		@include desktop {
 			width: 630px;
@@ -75,7 +95,11 @@
 	}
 	.mid {
 		width: 100%;
-		height: auto;
+		height: 243px;
+
+		@include tablet {
+			height: auto;
+		}
 
 		@include desktop {
 			width: 630px;
@@ -83,8 +107,19 @@
 		}
 	}
 	.small {
-		width: 332px;
-		height: 216px;
+		width: 163px;
+		height: 187px;
+		object-fit: cover;
+
+		@include small-mobile {
+			width: 45%;
+		}
+
+		@include tablet {
+			object-fit: none;
+			width: 332px;
+			height: 216px;
+		}
 
 		@include desktop {
 			width: 300px;
