--- a/components/Layout/Burger/Burger.module.scss
+++ b/components/Layout/Burger/Burger.module.scss
@@ -38,3 +38,13 @@
 		}
 	}
 }
+
+.hidden {
+	position: absolute;
+	user-select: none;
+	pointer-events: none;
+	font-size: 0px;
+	width: 0;
+	height: 0;
+	opacity: 0;
+}
