--- a/components/About/About.module.scss
+++ b/components/About/About.module.scss
@@ -36,15 +36,6 @@
 		.wrapper {
 			display: flex;
 			justify-content: space-between;
-			// gap: 17px;
-
-			@include tablet {
-				// gap: 24px;
-			}
-
-			@include desktop {
-				// gap: 40px;
-			}
 		}
 
 		.big {
@@ -109,6 +100,7 @@
 			font-size: 32px;
 			font-weight: 600;
 			text-transform: uppercase;
+			line-height: normal;
 
 			@include tablet {
 				font-size: 40px;
