--- a/components/Layout/Burger/Menu/Menu.module.scss
+++ b/components/Layout/Burger/Menu/Menu.module.scss
@@ -150,4 +150,14 @@
 			width: 100%;
 		}
 	}
+
+	.hidden {
+		position: absolute;
+		user-select: none;
+		pointer-events: none;
+		font-size: 0px;
+		width: 0;
+		height: 0;
+		opacity: 0;
+	}
 }
